+ Added fevicon. + removed mail option from footer. + Changed feedback-heading color

--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
 
 
 	<!--Favicon Icon-->
-	<link rel="icon" href="favicon/favicon.ico">
+	<link rel="icon" href="favicon/favicon_tk.ico">
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -29,9 +29,12 @@
 	<script src="https://kit.fontawesome.com/c05988054e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container border border-secondary">
     <nav class=" navbar navbar-expand-lg navbar-light bg-secondary">
-			<a href="#" class="navbar-brand text-warning">techKnowledge</a>
+			<a href="#" class="navbar-brand text-warning">
+        <i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i>
+        techKnowledge
+      </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -178,11 +181,10 @@
       <div class="social-footer-icons">
         <a target="_blank" href="https://twitter.com/?lang=en" title="Follow Us on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a target="_blank" href="https://www.facebook.com/" title="Like Us on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.gmail.com/" title="Mail Us"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://github.com/nikkisengar/" title="Github"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Follow Us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://github.com/nikkisengar/" title="Follow Us on Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong>techKnowledge</strong></p>
+      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
     </div>
   </footer>
   </div>
