--- a/feedback.html
+++ b/feedback.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!--Adding the favicon icon-->
-  <link rel="icon" href="favicon/favicon.ico">
+  <link rel="icon" href="favicon/favicon_tk.ico">
 
   <!--Adding bootstrap CSS-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -29,11 +29,14 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container border border-secondary">
 
     <!-- Navigaton bar section -->
     <nav class=" navbar navbar-expand-lg navbar-light bg-secondary">
-			<a href="#" class="navbar-brand text-warning">techKnowledge</a>
+			<a href="#" class="navbar-brand text-warning">
+        <i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i>
+        techKnowledge
+      </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -364,11 +367,10 @@
       <div class="social-footer-icons">
         <a target="_blank" href="https://twitter.com/?lang=en" title="Follow Us on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a target="_blank" href="https://www.facebook.com/" title="Like Us on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.gmail.com/" title="Mail Us"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://github.com/nikkisengar/TinDog-start" title="Github"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Follow Us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://github.com/nikkisengar/" title="Follow Us on Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong>techKnowledge</strong></p>
+      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
     </div>
   </footer>
   </div>
