--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -22,7 +22,7 @@
 
 
 	<!--Favicon Icon-->
-	<link rel="icon" href="favicon/favicon.ico">
+	<link rel="icon" href="favicon/favicon_tk.ico">
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -32,11 +32,13 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container border border-secondary">
 		<nav class=" navbar navbar-expand-lg navbar-light bg-secondary">
 			<a href="#" class="navbar-brand text-warning">
+				<i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i>
+				<!-- <i class="fas fa-brain"></i>  -->
 				techKnowledge
-				<!-- <img class="logo" src="images/techKnowledge5.png" alt="techKnowledge logo" /> -->
+				<!-- <img class="logo" src="images/techKnowledge6.png" alt="techKnowledge logo" /> -->
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
@@ -93,7 +95,8 @@
 					<p>
 						<strong class="text-primary">Note:</strong> Honorable mentions for interesting websites to learn SQL <i class="text-danger fas fa-angle-double-right"></i>
 						<a href="https://sqlbolt.com/" class="learnCode text-decoration-none" target="_blank"><i class="fas fa-table"></i> sqlbolt.com</a>,
-						<a href="https://www.essentialsql.com/" class="learnCode text-decoration-none" target="_blank"><i class="fas fa-server"></i> essentialsql.com</a>
+						<a href="https://www.essentialsql.com/" class="learnCode text-decoration-none" target="_blank"><i class="fas fa-server"></i> essentialsql.com</a>,
+						<a href="https://www.guru99.com/" class="learnCode text-decoration-none" target="_blank"><i class="fas fa-om"></i> guru99.com</a>
 					</p>
 				</dd>
 
@@ -146,7 +149,7 @@
 					</p>
 				</dd>
 
-				<dt><a href="https://www.codingame.com/" class="learnCode text-decoration-none" target="_blank"><i class="fab fa-cuttlefish"></i><i class="fab fa-gofore"></i> codingame.com</a></dt>
+				<dt><a href="https://www.codingame.com/" class="learnCode text-decoration-none" target="_blank"><i class="fab fa-cuttlefish"></i><i class="fas fa-info"></i><i class="fab fa-gofore"></i> codingame.com</a></dt>
 				<dd>
 					<p>
 						The name says it all, <em class="text-success">codingame</em> offers users the ability to solve coding challenges that are directly tied to online games. The new way to improve your programming skills while having fun and getting noticed.
@@ -1136,11 +1139,10 @@
       <div class="social-footer-icons">
         <a target="_blank" href="https://twitter.com/?lang=en" title="Follow Us on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a target="_blank" href="https://www.facebook.com/" title="Like Us on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.gmail.com/" title="Mail Us"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://github.com/nikkisengar/TinDog-start" title="Github"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Follow Us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://github.com/nikkisengar/" title="Follow Us on Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong>techKnowledge</strong></p>
+      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
     </div>
   </footer>
 	</div>
