+ Removed the copyright text from footer. + added placeholder fontawesome in feedback.html

--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -1142,7 +1142,7 @@
         <a target="_blank" href="https://www.instagram.com/?hl=en" title="Follow Us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a target="_blank" href="https://github.com/nikkisengar/" title="Follow Us on Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
+      <p class="footer-details"><i class="fas fa-copyright"></i> 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
     </div>
   </footer>
 	</div>
