--- a/feedback.html
+++ b/feedback.html
@@ -63,10 +63,10 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" required />
+              <input type="text" name="txtName" class="form-control" placeholder="&#xf007; Your Name *" value="" required />
             </div>
             <div class="form-group">
-              <input type="email" name="txtEmail" class="form-control" placeholder="Your Email *" value="" required />
+              <input type="email" name="txtEmail" class="form-control" placeholder="&#xf0e0; Your Email *" value="" required />
             </div>
             <div class="form-row">
               <div class="form-group  col-md-2">
@@ -74,12 +74,12 @@
                 <span class="form-group-addon"></span>
               </div>
               <div class="form-group col-md-10">
-                <input type="tel" pattern="[0-9]{10}" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" required />
+                <input type="tel" pattern="[0-9]{10}" name="txtPhone" class="form-control" placeholder="&#xf3cd; Your Phone Number *" value="" required />
               </div>
 
             </div>
             <div class="form-group">
-              <input name="country" list="countries" class="form-control" placeholder="Your Country *" required>
+              <input name="country" list="countries" class="form-control" placeholder="&#xf57e; Your Country *" required>
               <datalist id="countries">
                 <option value="Afganistan">Afghanistan</option>
                 <option value="Albania">Albania</option>
@@ -330,23 +330,23 @@
               </datalist>
             </div>
             <div class="form-group">
-              <input type="submit" name="btnSubmit" class="btnContact btn btn-outline-success btn-md" value="Send Message" required />
+              <button type="submit" name="btnSubmit" class="btnContact btn btn-outline-success btn-md" required><i class="fas fa-share"></i> Share</button>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <textarea name="txtMsg" class="form-control" placeholder="Your Message *" required style="width: 100%; height: 146px;"></textarea>
+              <textarea name="txtMsg" class="form-control" placeholder="&#xf086; Your Message *" required style="width: 100%; height: 146px;"></textarea>
             </div>
             <div class="form-row">
               <div class="form-group col-md-7">
-                <input name="state" list="states" class="form-control" placeholder="Your State *" required>
+                <input name="state" list="states" class="form-control" placeholder="&#xf4d9; Your State *" required>
                 <datalist id="states">
                   <option value="Afganistan">Afghanistan</option>
                   <option value="Albania">Albania</option>
                 </datalist>
               </div>
               <div class="form-group col-md-5">
-                <input name="zip" list="postalCodes" class="form-control" placeholder="Your Zip *" required>
+                <input name="zip" list="postalCodes" class="form-control" placeholder="&#xf1c6; Your Zip *" required>
                 <datalist id="postalCodes">
                   <option value="Afganistan">Afghanistan</option>
                   <option value="Albania">Albania</option>
@@ -354,7 +354,7 @@
               </div>
             </div>
             <div class="form-group">
-              <input type="reset" name="btnReset" class="btnContact btn btn-outline-dark btn-md" value="Reset Message" required />
+              <button type="reset" name="btnReset" class="btnContact btn btn-outline-dark btn-md" required><i class="fas fa-retweet"></i> Reset</button>
             </div>
           </div>
         </div>
@@ -370,7 +370,7 @@
         <a target="_blank" href="https://www.instagram.com/?hl=en" title="Follow Us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a target="_blank" href="https://github.com/nikkisengar/" title="Follow Us on Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
+      <p class="footer-details"><i class="fas fa-copyright"></i> 2020 <strong><i class="fas fa-chevron-left"></i> <i class="fab fa-tumblr"></i><i class="fab fa-kickstarter-k"></i> <i class="fas fa-chevron-right"></i> techKnowledge</strong></p>
     </div>
   </footer>
   </div>
