+ Changed the position of submit and reset button in feedback.html

--- a/feedback.html
+++ b/feedback.html
@@ -329,9 +329,6 @@
                 <option value="Zimbabwe">Zimbabwe</option>
               </datalist>
             </div>
-            <div class="form-group">
-              <button type="submit" name="btnSubmit" class="btnContact btn btn-outline-success btn-md" required><i class="fas fa-share"></i> Share</button>
-            </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
@@ -353,6 +350,16 @@
                 </datalist>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <button type="submit" name="btnSubmit" class="btnContact btn btn-outline-success btn-md" required><i class="fas fa-share"></i> Share</button>
+            </div>
+          </div>
+
+          <div class="col-md-6">
             <div class="form-group">
               <button type="reset" name="btnReset" class="btnContact btn btn-outline-dark btn-md" required><i class="fas fa-retweet"></i> Reset</button>
             </div>
